@@ -289,6 +289,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #17476: Fixed regression relative to Python2 in undocumented pydoc
+  'allmethods'; it was missing unbound methods on the class.
+
 - Issue #17474: Remove the deprecated methods of Request class.
 
 - Issue #16709: unittest discover order is no-longer filesystem specific. Patch
